# basic_of_programming

./: readme.md
sem_1/lab_7/: CMakeLists.txt  lab_7.cpp
sem_1/lab_7/inc/: Header.h
sem_1/lab_7/src/: Source.cpp
sem_1/lab_8/: CMakeLists.txt  lab_8.cpp
sem_1/lab_9/: CMakeLists.txt  lab_9.cpp
sem_1/practic_3_v5/: CMakeLists.txt  Practic_3.cpp
sem_1/practic_6/: CMakeLists.txt  Practic_6.cpp
sem_1/project/Development/Debug/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp
sem_1/project/Development/Debug/assets/: Project.ilk  vc143.idb
sem_1/project/Development/Debug/assets/Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
sem_1/project/Development/Release/: CMakeLists.txt  Planet.h
sem_2/lab_1/: CMakeLists.txt  Main.cpp
sem_2/lab_2/: CMakeLists.txt  lab_2.cpp
sem_2/lab_3/: CMakeLists.txt  lab_3.cpp
sem_2/lab_4/: CMakeLists.txt  lab_4.cpp
sem_2/lab_6/: CMakeLists.txt  Main.cpp
sem_2/lab_7/: CMakeLists.txt  lab_7.cpp
sem_2/lab_8/: lab_8.cpp
sem_2/project/: readme.md
sem_2/project/Development/Debug/: CMakeLists.txt  Cars.cpp  Cars.h  Game.cpp  Game.h
sem_2/project/Development/Release/: CMakeLists.txt  Logger.h  Main.cpp  Map.cpp  Map.h
sem_2/project/For users/: log.txt
sem_2/task_1/: CMakeLists.txt  task_2-1.cpp
